Add Nata work 2

--- a/src/project/tools.tex
+++ b/src/project/tools.tex
@@ -1,15 +1,105 @@
 \section{Используемые технологии}
 
-	Для реализации вычисления позитивно образованных формул подошёл
-		декларативный язык программирования общего назначения Prolog. При помощи этого языка,
-		можно реализовать рассмотрение множества вариантов обхода дерева формулы.
+	Логическое исчисление состоит из трёх компонент: язык, аксиомы и правила вывода.
+    
+Позитивно--образованные формулы (ПОФ)
+
+Пусть, $X$ --- множество переменных, и $A$ --- конъюнкт.
+\begin{itemize}
+
+\item[--]$\exists_XA$ и $\forall_XA$ есть $\exists$--ПОФ и $\forall$--ПОФ соответственно;
+
+\item[--] Если $F = \{F_1,\ldots,F_n\}$ есть $\forall$--ПОФы, тогда $\exists_XA\colon F$ есть $\exists$--ПОФ;
+
+\item[--] Если $F = \{F_1,\ldots,F_n\}$ есть $\exists$--ПОФы, тогда $\forall_XA\colon F$ есть $\forall$--ПОФ;
+
+\item[--] Любая $\exists$--ПОФ или $\forall$--ПОФ есть ПОФ.
+
+\end{itemize}
+
+
+Данный вид формул называется позитивно-образованным, поскольку для их записи используются только позитивные типовые кванторы. Иными словами, формула не содержит оператора отрицания.
+
+Любая формула языка предикатов первого порядка может быть представлена как позитивно--образованная формула. Таким образом ПО--формула есть особый вид записи классических формул языка предикатов, подобно КНФ, ДНФ и др.
+
+ПО--формула начинающаяся с $\forall \emptyset$ называется ПО--формулой в {\em каноническом виде}.
+
+Очевидно, что любая ПОФ может быть приведена к каноническому виду. Действительно, допустим $F$ --- это $\exists$--ПОФ, тогда выражние вида $\forall \emptyset\colon F$ по определению является $\forall$--ПОФ, и соответствует записи $true \rightarrow F$ тождественной $F$. Если $F$ --- это неканоническая $\forall$--ПОФ, тогда $\forall \emptyset\colon\{\exists \emptyset\colon F\}$ соответствует записи $true \rightarrow \{true\&F\}$, тождественной $F$. Типовые кванторы $\forall \emptyset$ и $\exists \emptyset$ называются {\em фиктивными}, поскольку не влияют на истинность формулы и не связывают никаких переменных, а только лишь служат конструкциями сохраняющими корректную запись ПОФ.
+
+Для удобства читаемости формул, будем представлять их в древовидной форме следующим образом:
+$$Q_XA\colon\{F_1,\ldots,F_n\} \equiv Q_XA \left\{
+\begin{array}{lcl}
+ F_1 \\
+ \ldots \\
+ F_n
+\end{array}
+\right.,$$
+
+\noindent{}где $Q$ некоторый квантор, и пользоваться соответствующей терминологией: узел, корень, лист, ветвь и т.д. Учитывая что квантору $\forall$ соответствует дизъюнкция формул $\{F_1,\ldots,F_n\}$, а квантору $\exists$ соответствует конъюнкция, то будем говорить что $\forall$ узлу соответствует {\em дизъюнктивное ветвление}, а $\exists$ узлу {\em конъюнктивное}.
+
+Некоторые части канонической ПО--формулы имееют специальные названия:
+\begin{itemize}
+\item[--] Корневой узел имеет вид $\forall \emptyset$ и назвается {\em корень ПО--формулы};
+
+\item[--] Дочерние узлы корня ПО--формулы имеют вид $\exists_XA$ и называются {\em базами ПО--формулы}, конъюнкт $A$ называется {\em базой фактов}, а вся подформула начинающаяся с базового узла называется {\em базовой подформулой};
+
+\item[--] Дочерние узлы баз имею вид $\forall_YB$ и называются {\em вопросами} к родительской базе. Если вопрос является листовым узлом $\forall_YB \equiv \forall_YB\colon false$, то он называется {\em целевым вопросом}. %Иногда, для того чтоб подчеркнуть тот факт что вопрос является целевым, будем в явной форме записывать конcтанту $false$.
+
+\item[--] Поддеревья вопросов называются {\em консеквентами} или {\em следствиями}. Следствием целевого вопроса является $false$.
+
+\end{itemize}
+
+
+На примере аналогии с языком Пролог можно более доступно рассмотреть ПО-формулы.
+
+\begin{itemize}
+\item[--] База фактов ПОФ, являющаяся конъюнкцией атомов, соответствует множеству фактов пролога.
+\item[--] Правила пролога имеют форму \texttt{P0:- P1,..., Pn}. В данном случае, \texttt{P1,...,Pn} соответствует конъюнкту вопроса, а \texttt{P0} его консеквенту (следствию). Отметим, что язык ПО--формул несколько богаче чем язык пролога, поскольку допускает использование в качестве консеквента дизъюнкцию произвольных формул, пролог же допускает лишь одну атомарную формулу.
+\item[--] Целевой вопрос ПО--формулы вида $\forall_YB$ соответствует запросу пролога.
+\end{itemize}
+
+Рассмотрим следующую программу на языке Пролог и запрос к ней:
+\texttt{\raggedright\noindent
+\\
+in(a,b).\\
+in(b,c).\\
+it(X,Y):-in(X,Z),in(Z,Y).\\
+?- it(a,X).\\
+}
+
+Соответствующая данной программе ПО--формула:
+
+$\forall \emptyset\colon\exists in(a,b),in(b,c)\colon\left\{
+\begin{array}{lcl}
+ \forall_{x,y,z}in(x,z),in(z,y)\colon\exists it(x,y) \\
+ \forall_x it(a,x)
+\end{array}
+\right..$
+
+
+    Исходя из вышеописанного и учитывая удобство адаптации языка к ПО-формулам для реализации вычисления позитивно образованных формул подошёл декларативный язык программирования общего назначения Prolog. При помощи этого языка,можно реализовать рассмотрение множества вариантов обхода дерева формулы.
 	
 	\subsection{SWI-Prolog}
-		Prolog -- один из старейших и все еще один из наиболее популярных языков логического программирования,
-			хотя он значительно менее популярен, чем основные императивные языки.
-			Он используется в системах обработки естественных языков, исследованиях искусственного интеллекта,
-			экспертных системах, онтологиях и других предметных областях,
-			для которых естественно использование логической парадигмы. 
+		Prolog (Programming in logic) -- один из старейших и все еще один из наиболее популярных языков логического программирования,
+			хотя он значительно менее популярен, чем основные императивные языки. Это язык высокого уровня, не алгоритмический, предназначенный для написания программ с использованием концепций и методов логического программирования. В основе Пролога лежит раздел математической логики, называемый исчисление предикатов. Его базис составляет процедура доказательства теорем методом резолюции для хорновских дизъюнктов. Пролог включает механизм вывода, который основан на сопоставлении образцов, с помощью подбора ответов на запросы он извлекает хранящуюся (известную) информацию.
+            
+Области применения языка Prolog и декларативных языков в целом
+
+\begin{itemize}
+   \item[--] Реализация систем искусственного интеллекта
+   \item[--] Создание экспертных систем и оболочек экспертных систем
+   \item[--] Разработка систем помощи принятия решений
+   \item[--] Разработка систем обработки естественного языка
+   \item[--] Построение планов действий роботов и т.п.
+\end{itemize}
+
+Особенности языка
+
+\begin{itemize}
+    \item[--] Описание проблемы и правил ее решения
+    \item[--] Нахождение всех возможных решений с помощью механизма поиска с возвратом (backtracking)
+    \item[--] Легкий синтаксис
+\end{itemize}
 	
 		Prolog был создан под влиянием более раннего языка Planner и позаимствовал из него следующие идеи:
 
@@ -45,7 +135,17 @@
 			Эти предикаты позволяют использовать другие предикаты в качестве глобальных переменных, что
 			позволяет существенно упростить написание правил для вычисления.
 
-		SWI-Prolog — это свободная (открытая) реализация языка программирования \\ Prolog, часто используемая для преподавания и приложений Semantic Web. Эта реализация представляет богатый набор возможностей, библиотеки для constraint logic programming, многопоточности, юнит-тестирования, интерфейс к языку программирования Java, ODBC и т. д., поддерживает литературное программирование, содержит реализацию веб-сервера, библиотеки для SGML, RDF, RDFS.
+		SWI-Prolog — это свободная (открытая) реализация языка программирования \\ Prolog, часто используемая для преподавания и приложений Semantic Web. Эта реализация представляет богатый набор возможностей, библиотеки для constraint logic programming, многопоточности, юнит-тестирования, интерфейс к языку программирования Java, ODBC и т. д., поддерживает литературное программирование, содержит реализацию веб-сервера, библиотеки для SGML, RDF, RDFS. 
+        
+        Ниже приведены некоторые особенности юиблиотеки SWI-Prolog:
+       
+\begin{itemize}
+   \item[--]   является мощной средой разработки с набором графических инструментов ХРСЕ. Ядро системы лицензировано под GNU LGPL, библиотеки — под GNU GPL с дополнительным условием, позволяющим использование в проприетарных приложениях. 
+
+    \item[--] система довольно популярна, в основном благодаря удобной среде и переносимой библиотеке для создания графического интерфейса. SWI-Prolog, как почти все реализации языка, по большей части реализует Edinburgh Prolog, но также содержит отдельные элементы ISO Prolog.
+
+    \item[--] SWI-Prolog включает в себя быстрый компилятор, профилировщик, набор библиотек и удобный интерфейс для подключения C-модулей. Он реализован для ряда UNIX-платформ, таких, как HP, IBM Linux, для NeXT, OS/2, Sun и Sparc.
+\end{itemize}
 
 \subsection{SimPy}
 
