Finish project files

--- a/src/project/code.tex
+++ b/src/project/code.tex
@@ -94,6 +94,9 @@ with elev.cab.request() as request:
 			\end{itemize}
 
 		Сама же запись в журнал имеет следующую структуру.
+\begin{lstlisting}
+23 May 2018 22:48:41 [40:4] TRACE Manage people
+\end{lstlisting}
 		Первые четыре столбца в журнале -- это реальное время журналирования момента модуляции.
 		Следующим столбцом идёт связка двух чисел, первое число - это номер процесса,
 		он необходим для идентификации сессии, а второе число показывает момент времени модуляции.
@@ -130,58 +133,327 @@ with elev.cab.request() as request:
 			Изучив выше изложенный журнал, можно увидеть, что за время симуляции появилось 4 человека,
 				каждый человек доставлен.
 
+	\subsection{Реализация на языке Prolog}
+
+		Перед реализацией системы, которая будет осуществлять управление посредством выполнения логического вывода
+			необходимо реализовать среду, в которой будет протекать процесс, нуждающийся в автоматическом обслуживании.
+			Аналогично реализации на языке Python была выполнена модель на языке Prolog с некоторыми различиями:
+		\begin{itemize}
+			\item[--] всё действие выполняется в один поток;
+			\item[--] все случайные значения генерируются заранее.
+		\end{itemize}
+
+		Следует пояснить какие значения задаются случайным образом:
+		\begin{itemize}
+			\item[--] этаж, которого поступает запрос на обработку;
+			\item[--] этаж, который будет выбран в качестве ли в процессе обработки запроса;
+			\item[--] момент времени, в который поступает запрос.
+		\end{itemize}
+
+		Моделирование процесса происходит за счёт выполнения логического вывода, что облегчает наделять 
+			систему автоматического управления интеллектуальностью. Более того, правила описанные для
+			моделируемого процесса будут использованы для построения решения системой управления.
+
+		В приложении А представлен основной файл, в котором реализована инициализация логического вывода.
+			Данный код иллюстрирует реализацию формулы времени. Благодаря функционалу SWI-Prolog
+			в дальнейшем предикаты отражающие время можно будет указывать в правилах только при необходимости.
+		
+		Реализации правил manage\_people и manage\_elevators вынесены в другие файлы,
+			как как являются весьма громоздкими.
+			Manage\_people отвечает за внешний фактор (случайное появление нуждающихся в лифте людей).
+			А manage\_elevators включает в себя формулы движения лифтов.
+
+		Что касается инициализации моделируемого процесса, то из журнала можно узнать все детали начального
+			состояния модели.
+
+\begin{lstlisting}
+23 May 2018 22:48:41 [40:null] DEBUG Show var: Steps '20' Elev '2' Floors '5' People '2'
+23 May 2018 22:48:41 [40:null] TRACE Start modulation
+23 May 2018 22:48:41 [40:null] DEBUG Init people apprears '[2,4]'
+23 May 2018 22:48:41 [40:null] DEBUG Init people floors '[1,0]'
+23 May 2018 22:48:41 [40:null] DEBUG Init people targets '[4,4]'
+23 May 2018 22:48:41 [40:null] DEBUG Init people waiting '[0,0]'
+23 May 2018 22:48:41 [40:null] DEBUG Init people states '[0,0]'
+23 May 2018 22:48:41 [40:null] DEBUG Init elevators floors '[0,1]'
+\end{lstlisting}
+
+	Из данной части журнала можно выяснить следующие вещи:
+		\begin{itemize}
+			\item[--] моделируемый процесс будет протекать в течении 20 единиц времени;
+			\item[--] количество кабин равняется двум;
+			\item[--] количество этажей равняется пяти;
+			\item[--] количество поступаемых запросов равняется двум;
+			\item[--] первый запрос появится во после истечения второй единицы времени,
+				а второй после четвёртой;
+			\item[--] запросы будут со второго и первого этажа соответственно;
+			\item[--] целью обоих запросов является этаж под номером 4;
+			\item[--] кабины расположены на первом и втором этажах.
+		\end{itemize}
+
+	Во время инициализации моделируемого процесса нет информации о текущей единице времени, поэтому пишется null.
+
+	За время выполнения моделируемого процесса будет в журнале будет саккумулирована вся промежуточная информация.
+		Это позволяет более ясно представить картину о произошедших действиях. Особенно такой функционал важен
+		при отладке программного решения, так как в момент внеплановой остановки программы информации предоставляемой
+		инструментарием SWI-Prolog  может не хватать. Тем более программа может вести себя некорректно
+		и без внезапных остановок.
+
+	После завершения моделируемого процесса необходимо собрать данные о результатах, которые необходимы для оценки разработанного программного решения.
+
+	Разработанное ведение журнала позволяет записывать различную информацию о принципах проходимого процесса.
+\begin{lstlisting}
+23 May 2018 22:48:41 [40:18] TRACE Start step
+23 May 2018 22:48:41 [40:18] TRACE Finish step
+23 May 2018 22:48:41 [40:19] TRACE Start step
+23 May 2018 22:48:41 [40:19] TRACE Finish step
+23 May 2018 22:48:41 [40:null] TRACE Finith modulation
+23 May 2018 22:48:41 [40:null] TRACE Show statistics
+23 May 2018 22:48:41 [40:null] INFO People status results: '[3,3]'
+23 May 2018 22:48:41 [40:null] INFO People waiting results: '[1,1]'
+\end{lstlisting}
+
+	С помощью приведённой чисти журнал, можно собрать некоторую статистику о проделанной работе. Например,
+		по результатам показанной части журнала можно сделать вывод, что все пассажиры доставлены
+		и ожидание каждого их них не составило дольше одной единицы времени. 
+
+	В приложении Б при ведён журнал, вмещающий в себя информацию о деталях работы моделируемого процесса от запуска
+		до завершения.
+
+	\subsection{Блок управления на языке Prolog}
+
+		Вот время работы кабины имеют график, в котором отражено какие этажи будут посещены донной кабиной.
+			Таким образом каждая камина обладает списком задач, который необходимо выполнить. Если этот
+			список пустует, то кабина находится в покое.
+			В момент поступления запроса система управления должна принять решение, в чью очередь задач
+			должен попасть этаж, с которого поступил запрос. То есть система должна вычислить какая кабина
+			ближе к этажу, откуда поступил запрос, с учётом очереди задач кабины.
+
+		Ниже приведена часть программы, которая отвечает за поиск наиболее подходящей кабины:
+\begin{lstlisting}
+get_dist(Pos, [], Floor, Res) :- Res is abs(Pos - Floor).
+get_dist(Pos, [H | T], Floor, Res) :-
+	(H = -1 ->
+		get_dist(Pos, T, Floor, Dist),
+		Res is Dist + 1
+	;
+		get_dist(H, T, Floor, Dist),
+		Res is Dist + abs(Pos - H)
+	).
+
+fill_dist(0, _, Dist, Dist).
+fill_dist(Ind, Floor, Dist, Res) :-
+	NextInd is Ind - 1,
+	var_getvalue(elevators_floors, ElevFloors),
+	get_elem(ElevFloors, NextInd, 0, ElevPos),
+	atom_concat('elev_rmap_', NextInd, MapName),
+	term_string(MapTerm, MapName),
+	var_getvalue(MapTerm, Map),
+	get_dist(ElevPos, Map, Floor, D),
+	set_elem(Dist, NextInd, 0, D, NewDist),
+	fill_dist(NextInd, Floor, NewDist, Res).
+
+find_available_elev(Floor) :-
+	nb_getval(n_elevators, NElev),
+	zero_list(NElev, Dist),
+	fill_dist(NElev, Floor, Dist, Distances),
+	swritef(ElevDistLog, 'Current distances are \'%t\'', [Distances]),
+	logdebug(ElevDistLog),
+	get_min_dist_id(Distances, MinDist, Elev),
+	swritef(ElevMinDistLog, 'Current min dist \'%t\' with id \'%t\'', [MinDist, Elev]),
+	logdebug(ElevMinDistLog),
+	append2map(Elev, Floor).
+
+find_in_list([], _, Res) :- Res = false.
+find_in_list([H | T], Val, Res) :-
+	(H = Val ->
+		Res = true
+	;
+		find_in_list(T, Val, Res)
+	).
+
+find_in_elev_lists(_, Ind, Res) :- Ind =< 0, Res = false.
+find_in_elev_lists(Floor, Ind, Res) :-
+	Ind >= 0,
+	NextInd is Ind - 1,
+	atom_concat('elev_rmap_', NextInd, ListName),
+	term_string(ListTerm, ListName),
+	var_getvalue(ListTerm, List),
+	find_in_list(List, Floor, FRes),
+	(FRes ->
+		Res = true
+	;
+		find_in_elev_lists(Floor, NextInd, Res)
+	).
+
+find_floor(Floor, Res) :-
+	nb_getval(n_elevators, NElev),
+	find_in_elev_lists(Floor, NElev, Res).
+
+elev_call(Floor) :-
+	find_floor(Floor, IsFloorInMaps),
+	(IsFloorInMaps ->
+		logdebug('Floor is in maps')
+	;
+		logtrace('Putting floor to map'),
+		find_available_elev(Floor)
+	).
+\end{lstlisting}
+
+	Представленный выше код от иллюстрирует алгоритм, по которому происходит поиск решения.
+		Данная реализация является более развитой, чем реализация представленная на языке Python,
+		но всё равно поиск производится по достаточно простому принципу.
+
 	\subsection{Интеллектуальная реализация на языке Prolog}
 
-		Однако, пусть реализация логического вывода на языке Prolog является целесообразной задачей, но для разделения моделируемой системы на логический блок и блок взаимодействия объектов необходима клиент-сервергая связка. А реализация сервера или клиента на языке Prolog не является его типовой задачей, что и касается реализации графической составляющей системы моделирования.
+		Как уже было замечено, при поступлении запроса система управления имеет целый перечень вариантов решения.
+			И почти каждое решение влечёт за собой различные варианты развития событий. Возможны даже
+			ситуации, когда с очки зрения уже про иллюстрированного подхода вариант решения является не подходящем,
+			это решение может оказать самым наилучшим ввиду меняющихся условий с течением времени.
 
-			Таким образом более целесообразном будет оставить блок взаимодействия объектов реализованными на языку Prolog.
-				Более того, правила описанные для модуляции системы будут использованы
-				для построения решения логическим блоком.
+		В приложении А размещён код, который иллюстрирует реализацию формулы реализующей следующие функции:
+		\begin{itemize}
+			\item[--] обход возможных вариантов будущего;
+			\item[--] сбор статистики с каждого варианта;
+			\item[--] выбор наиболее подходящего варианта будущего по признаку.
+		\end{itemize}
 
-			Данный код иллюстрирует реализацию формулы реализующие обход возможных вариантов будущего, сбор статистики с каждого варианта и выбор наиболее подходящего варианта будущего по признаку. в данном случае интересующим признаком является среднее ожидание человеком кабины. 
+			В данном случае интересующим признаком является среднее ожидание человеком кабины. 
+				За время поиска наиболее подходящего варианта решения, про исходит обход дерева
+				возможных состояний системы, рассмотрев варианты и произведя оценку система выбирает более
+				более подходящую кабину. Часть приведённая ниже ниже как раз демонстрирует  этот выбор.
+\begin{lstlisting}
+do_simulate(Floor, Elev, H) :-
+	nb_getval(current_sim, SimPrefix),
+	append2map(Elev, Floor),
+	manage_elevators,
+	var_getvalue(step, Step),
+	Next is Step + 1,
+	var_setvalue(step, Next),
+	simulate_loop(SimPrefix),
+	sim_getval(SimPrefix, people_waiting, PeopleWaitingList),
+	sum_list(PeopleWaitingList, H),
+	swritef(SimLog, 'Waiting sum is \'%t\'', [H]),
+	logdebug(SimLog).
+simulate(Floor, Elev, H) :-
+	(nb_current(current_sim, CurrentPrefix) ->
+		atom_concat(CurrentPrefix, Elev, SimPrefix),
+		atom_concat(SimPrefix, '_', Prefix),
+		init_sim(Prefix),
+		nb_setval(current_sim, Prefix),
+		do_simulate(Floor, Elev, H),
+		nb_setval(current_sim, CurrentPrefix)
+	;
+		atom_concat('r_', Elev, SimPrefix),
+		atom_concat(SimPrefix, '_', Prefix),
+		init_sim(Prefix),
+		nb_setval(current_sim, Prefix),
+		do_simulate(Floor, Elev, H),
+		nb_delete(current_sim)
+	).
+\end{lstlisting}
 
-% \input{src/pl_mod_code.tex}
+	Таким образом данная система является более интеллектуально в сравнении с предыдущем вариантом.
 
-	Благодаря функционалу SWI-Prolog
-		предикаты отражающие состояние системы в момент вызова кабины можно будет указывать в правилах только при необходимости.
+	\subsection{Ведение журнала для интеллектуальной реализации}
+		Учитывая тот факт что поиск решения усложнился, следует полагать, что возросла потребность
+			в более информативных записях в журнале. Для записей из такого журнала
+			нужно добавить информацию как проходил обход имеющихся решений.
 
-		\subsubsection{Пример работы реализации}
+		Изучив изложенный приложении Б журнал, можно увидеть, что происходит построение дерева формулы и её обход.
+			Для того чтобы было нагляднее следует прокомментировать строку лога.
 
-	Данный пример иллюстрирует работу группы лифтов, где их количество равно 2, в здании с 5 этажами.
-		В ходе работы системы появится два человека в моменты времени $t_2$ и $t_4$ на этажах $e_1$ и $e_0$,
-		и у каждого человека целью будет четвёртый этаж $d_4$.
+\begin{lstlisting}
+with elev.cab.request() as request:
+24 May 2018 06:49:49 [71:2] [r_0_:4] TRACE Start step
+24 May 2018 06:49:49 [71:2] [r_0_:4] TRACE Do loop step
+\end{lstlisting}
 
-	Изначально первая кабина находится на первом этаже $e_0$, а вторя на втором $e_1$.
-		Ниже приведён лог показывающий работу системы:
+		Первые четыре столбца в логе - это реальное время журналирования момента модуляции.
+			Следующим столбцом идёт связка двух чисел, первое число - это номер процесса,
+			он необходим для идентификации сессии, а второе число показывает момент времени модуляции.
+			Ещё одним столбцом является связка строки и числа, число - это так же момент времени в данной ветки формулы,
+			А строка отражает индекс чанка формулы в момент вывода, r означает корень выводимой формулы,
+			а дальше серез нижние подчёркивание перечислены индексы кабин, которые участвуют
+			в логическом выводе в данные момент.
 
-		%example
+		Так же следует упомянуть, что отдельное внимание требует инициализация обработки одного из решений:
 
-Изучив выше изложенный журнал, можно увидеть, что происходит построение дерева формулы и её обход.
-	Для того чтобы было нагляднее следует прокомментировать строку лога.
+\begin{lstlisting}
+24 May 2018 06:49:49 [71:2] TRACE Copy var 'step' into 'r_0_step' with val '2'
+24 May 2018 06:49:49 [71:2] TRACE Copy var 'people_targets' into 'r_0_people_targets' with val '[4,4]'
+24 May 2018 06:49:49 [71:2] TRACE Copy var 'people_floors' into 'r_0_people_floors' with val '[1,0]'
+24 May 2018 06:49:49 [71:2] TRACE Copy var 'people_waiting' into 'r_0_people_waiting' with val '[0,0]'
+24 May 2018 06:49:49 [71:2] TRACE Copy var 'people_states' into 'r_0_people_states' with val '[1,0]'
+24 May 2018 06:49:49 [71:2] TRACE Copy var 'elevators_floors' into 'r_0_elevators_floors' with val '[0,1]'
+24 May 2018 06:49:49 [71:2] TRACE Copy var 'elev_rmap_1' into 'r_0_elev_rmap_1' with val '[]'
+24 May 2018 06:49:49 [71:2] TRACE Copy var 'elev_people_1' into 'r_0_elev_people_1' with val '[]'
+24 May 2018 06:49:49 [71:2] TRACE Copy var 'elev_rmap_0' into 'r_0_elev_rmap_0' with val '[]'
+24 May 2018 06:49:49 [71:2] TRACE Copy var 'elev_people_0' into 'r_0_elev_people_0' with val '[]'
+\end{lstlisting}
 
-Первые четыре столбца в логе - это реальное время журналирования момента модуляции.
-	Следующим столбцом идёт связка двух чисел, первое число - это номер процесса,
-	он необходим для идентификации сессии, а второе число показывает момент времени модуляции.
-	Ещё одним столбцом является связка строки и числа, число - это так же момент времени в данной ветки формулы,
-	А строка отражает индекс чанка формулы в момент вывода, r означает корень выводимой формулы, а дальше серез нижние подчёркивание перечислены индексы кабин, которые участвуют в логическом выводе в данные момент.
+		Рассмотрев от журнал можно сделать вывод, что при инициализации рассмотрения варианта решения
+			происходит копирование переменных окружения. Это необходимо для того, что бы 
+			основные данные при моделировании небыли испорчены.
 
+	\subsection{Реализация на языке Prolog с элементом вероятности}
+		Очевидно, что очень сильно упрощена. Более того в реальной жизни не всегда известно
+			в какое время ожидать запрос на обработку.
+
+		Добавление правила, приближающую текущую реализацию к реальной жизни, подчеркнёт
+			гибкость разработанного программного продукта. И это докажет что данная система легко настраиваемая
+			под разного рода задачи.
+
+		С помощью пары правил добавляется элемент вероятности к появлению запроса:
+\begin{lstlisting}
+(nb_current(current_sim, _) -> TheVer = Prob ; TheVer = Ver),
+(TheVer >= 50 ->
+	get_people_elem(people_floors, Id, Floor),
+	swritef(AppearLog, 'A man appears with id \'%t\' on floor with id \'%t\'', [Id, Floor]),
+	loginfo(AppearLog),
+	set_people_elem(people_states, Id, 1),
+	elev_call(Floor)
+;
+	set_people_elem(people_states, Id, -1),
+	loginfo('A man does not appear')
+)
+\end{lstlisting}
+
+		Такие изменения повлекут за собой ложные запросы, которые будут рассмотрены системой управления.
+
+		Получив такой вариант программы, можно сделать вывод, что данная реализация легко  может быть адаптирована
+			под любую систему или среду.
+
+	\subsection{Добавление ограничений на логический вывод}
+		В ходе выполнения тестирования обнаружился интересный факте, более интеллектуальные реализации
+			прекращали работу до её завершения из-за недостатка ресурсов. 
+
+		Естественно, вопрос заключается в том, что когда программа проходит возможные варианты,
+			программное решение выполняет слишком много операций.
+
+		В данном случае решением является правило ограничивающие то, на сколько много последовательных запросов
+			в будущем система должна учитывать.
+\begin{lstlisting}
+simulate_loop(SimPrefix) :- nb_getval(deep, Deep), string_length(SimPrefix, CurrentDeep), Deep =< CurrentDeep.
+simulate_loop(SimPrefix) :-
+	nb_setval(current_sim, SimPrefix),
+	sim_getval(SimPrefix, step, Step),
+	nb_getval(n_steps, Steps),
+	Step >= Steps,
+	swritef(SimLog, 'Simulation \'%t\' is finished', [SimPrefix]),
+	logtrace(SimLog),
+	show_stat.
+simulate_loop(SimPrefix) :-
+	nb_setval(current_sim, SimPrefix),
+	var_getvalue(step, Step),
+	nb_getval(n_steps, Steps),
+	Step < Steps,
+	logtrace('Start step'),
+	simulate_loop_step,
+	logtrace('Finish step'),
+	Next is Step + 1,
+	var_setvalue(step, Next),
+	simulate_loop(SimPrefix).
+\end{lstlisting}
 		
-		% Ниже представлен основной файл, в котором реализован инициализация логического вывода.
-		% Данный код иллюстрирует реализацию формулы времени. Благодаря функционалу SWI-Prolog
-		% в дальнейшем предикаты отражающие время можно будет указывать в правилах только при необходимости.
-
-	% Реализации правил manage\_people и manage\_elevators вынесены в другие файлы,
-	%     как как являются весьма громоздкими.
-	%     Manage\_people отвечает за внешний фактор (случайное появление нуждающихся в лифте людей).
-	%     А manage\_elevators включает в себя формулы движения лифтов.
-
-	% \subsection{Пример работы реализации}
-    %
-	% Данный пример иллюстрирует работу группы лифтов, где их количество равно 2, в здании с 5 этажами.
-	%     В ходе работы системы появится два человека в моменты времени $t_2$ и $t_4$ на этажах $e_1$ и $e_0$,
-	%     и у каждого человека целью будет четвёртый этаж $d_4$.
-    %
-	% Изначально первая кабина находится на первом этаже $e_0$, а вторя на втором $e_1$.
-	%     Ниже приведён лог показывающий работу системы:
-    %
-	% Изучив выше изложенный журнал, можно увидеть результат, что каждый человек доставлен и ожидание составило не более одной единицы времени.
+		 После такой реализации более интеллектуальное решение стало чаще ошибаться. В результате имеется два варианта:
+		 	иметь дорогое высокопроизводительное оборудование или пользоваться менее интеллектуальной программой.
