--- a/src/project/cmp.tex
+++ b/src/project/cmp.tex
@@ -1,7 +1,7 @@
 \section{Сравнительный анализ}
 
 	Как было упомянуто выше одним из основных критериев является средняя длительность ожиданий.
-		Так же можно сравнить время выполнения модуляции. С помощью среднего времени ожидания
+		Так же можно сравнить время выполнения моделируемого процесса. С помощью среднего времени ожидания
 		можно оценить эффективность разработанного решения, и, используя время выполнения программ можно
 		произвести оценку ресурсозатратности разработанного решения.
 
@@ -22,14 +22,14 @@
 			Для зданий со сложной инфраструктурой подходит значение в 30 этажей, для зданий с менее развитой
 			инфраструктурой 15 этажей и для ещё менее 5 этажей.
 
-		 Для сбора дынных производился многочисленный запуск модуляции и был произведён подсчёт средних значений.
+		 Для сбора дынных производился многочисленный запуск моделируемого процесса и был произведён подсчёт средних значений.
 		 	  Результаты сбора данных приведены в таблицах \ref{projectt1}-\ref{projectt4}.
 			  Для упрощения представления полученных данных были даны названия реализациям: более интеллектуальным способом
 			  реализации является I тип, а более тривиальным является II тип.
 
 	\subsection{Сравнение реализаций}
 
-		Не взирая на тот факт, что модели типов I и II сильно упрощены, уже можно произвести оценку их
+		Невзирая на тот факт, что модели типов I и II сильно упрощены, уже можно произвести оценку их
 			эффективности и ресурсозатратности  по данным в таблицах \ref{projectt1}  и \ref{projectt2}.
 		
 		\input{src/tables/projectt1.tex}
@@ -50,7 +50,7 @@
 		При таких условиях возникает вопросы:
 		\begin{itemize}
 			\item[--] будет ли система  I типа всё ещё эффективной;
-			\item[--] на сколько сильно процесс проведения модуляции затянется, если затянется.
+			\item[--] на сколько сильно процесс проведения моделируемого процесса затянется, если затянется.
 		\end{itemize}
 
 		Конечно, было бы нечестно реализации I типа не дать возможность оценки вероятности появления запроса.
@@ -74,7 +74,7 @@
 
 	\subsection{Сравнение реализаций на языках Prolog и Python}
 
-		Входе выполнения экспериментов на выполнение модуляций с ещё большими числами не хватило вычислительной мощи
+		Входе выполнения экспериментов на выполнение моделируемого процесса с ещё большими числами не хватило вычислительной мощи
 			оборудования для реализаций на Prolog. Что иллюстрирует потребность в ресурсах у данных подходов
 			к решению задачи.
 		
