--- a/src/project/code.tex
+++ b/src/project/code.tex
@@ -97,9 +97,9 @@ with elev.cab.request() as request:
 \begin{lstlisting}
 23 May 2018 22:48:41 [40:4] TRACE Manage people
 \end{lstlisting}
-		Первые четыре столбца в журнале -- это реальное время журналирования момента модуляции.
+		Первые четыре столбца в журнале -- это реальное время журналирования момента моделируемого процесса.
 		Следующим столбцом идёт связка двух чисел, первое число - это номер процесса,
-		он необходим для идентификации сессии, а второе число показывает момент времени модуляции.
+		он необходим для идентификации сессии, а второе число показывает момент времени моделируемого процесса.
 		А дальнейшая информация передаёт сообщения записываемые программой.
 
 	\subsection{Пример работы реализации на SimPy}
@@ -368,9 +368,9 @@ with elev.cab.request() as request:
 24 May 2018 06:49:49 [71:2] [r_0_:4] TRACE Do loop step
 \end{lstlisting}
 
-		Первые четыре столбца в логе - это реальное время журналирования момента модуляции.
+		Первые четыре столбца в логе - это реальное время журналирования момента моделируемого процесса.
 			Следующим столбцом идёт связка двух чисел, первое число - это номер процесса,
-			он необходим для идентификации сессии, а второе число показывает момент времени модуляции.
+			он необходим для идентификации сессии, а второе число показывает момент времени моделируемого процесса.
 			Ещё одним столбцом является связка строки и числа, число - это так же момент времени в данной ветки формулы,
 			А строка отражает индекс чанка формулы в момент вывода, r означает корень выводимой формулы,
 			а дальше серез нижние подчёркивание перечислены индексы кабин, которые участвуют
