--- a/src/project/tools.tex
+++ b/src/project/tools.tex
@@ -9,11 +9,11 @@
 
 \item[--]$\exists_XA$ и $\forall_XA$ есть $\exists$--ПОФ и $\forall$--ПОФ соответственно;
 
-\item[--] Если $F = \{F_1,\ldots,F_n\}$ есть $\forall$--ПОФы, тогда $\exists_XA\colon F$ есть $\exists$--ПОФ;
+\item[--] если $F = \{F_1,\ldots,F_n\}$ есть $\forall$--ПОФы, тогда $\exists_XA\colon F$ есть $\exists$--ПОФ;
 
-\item[--] Если $F = \{F_1,\ldots,F_n\}$ есть $\exists$--ПОФы, тогда $\forall_XA\colon F$ есть $\forall$--ПОФ;
+\item[--] если $F = \{F_1,\ldots,F_n\}$ есть $\exists$--ПОФы, тогда $\forall_XA\colon F$ есть $\forall$--ПОФ;
 
-\item[--] Любая $\exists$--ПОФ или $\forall$--ПОФ есть ПОФ.
+\item[--] любая $\exists$--ПОФ или $\forall$--ПОФ есть ПОФ.
 
 \end{itemize}
 
@@ -39,13 +39,13 @@ $$Q_XA\colon\{F_1,\ldots,F_n\} \equiv Q_XA \left\{
 
 Некоторые части канонической ПО--формулы имееют специальные названия:
 \begin{itemize}
-\item[--] Корневой узел имеет вид $\forall \emptyset$ и назвается {\em корень ПО--формулы};
+\item[--] корневой узел имеет вид $\forall \emptyset$ и назвается {\em корень ПО--формулы};
 
-\item[--] Дочерние узлы корня ПО--формулы имеют вид $\exists_XA$ и называются {\em базами ПО--формулы}, конъюнкт $A$ называется {\em базой фактов}, а вся подформула начинающаяся с базового узла называется {\em базовой подформулой};
+\item[--] дочерние узлы корня ПО--формулы имеют вид $\exists_XA$ и называются {\em базами ПО--формулы}, конъюнкт $A$ называется {\em базой фактов}, а вся подформула начинающаяся с базового узла называется {\em базовой подформулой};
 
-\item[--] Дочерние узлы баз имею вид $\forall_YB$ и называются {\em вопросами} к родительской базе. Если вопрос является листовым узлом $\forall_YB \equiv \forall_YB\colon false$, то он называется {\em целевым вопросом}. %Иногда, для того чтоб подчеркнуть тот факт что вопрос является целевым, будем в явной форме записывать конcтанту $false$.
+\item[--] дочерние узлы баз имею вид $\forall_YB$ и называются {\em вопросами} к родительской базе. Если вопрос является листовым узлом $\forall_YB \equiv \forall_YB\colon false$, то он называется {\em целевым вопросом}. %Иногда, для того чтоб подчеркнуть тот факт что вопрос является целевым, будем в явной форме записывать конcтанту $false$.
 
-\item[--] Поддеревья вопросов называются {\em консеквентами} или {\em следствиями}. Следствием целевого вопроса является $false$.
+\item[--] поддеревья вопросов называются {\em консеквентами} или {\em следствиями}. Следствием целевого вопроса является $false$.
 
 \end{itemize}
 
@@ -53,9 +53,9 @@ $$Q_XA\colon\{F_1,\ldots,F_n\} \equiv Q_XA \left\{
 На примере аналогии с языком Пролог можно более доступно рассмотреть ПО-формулы.
 
 \begin{itemize}
-\item[--] База фактов ПОФ, являющаяся конъюнкцией атомов, соответствует множеству фактов пролога.
-\item[--] Правила пролога имеют форму \texttt{P0:- P1,..., Pn}. В данном случае, \texttt{P1,...,Pn} соответствует конъюнкту вопроса, а \texttt{P0} его консеквенту (следствию). Отметим, что язык ПО--формул несколько богаче чем язык пролога, поскольку допускает использование в качестве консеквента дизъюнкцию произвольных формул, пролог же допускает лишь одну атомарную формулу.
-\item[--] Целевой вопрос ПО--формулы вида $\forall_YB$ соответствует запросу пролога.
+\item[--] база фактов ПОФ, являющаяся конъюнкцией атомов, соответствует множеству фактов пролога.
+\item[--] правила пролога имеют форму \texttt{P0:- P1,..., Pn}. В данном случае, \texttt{P1,...,Pn} соответствует конъюнкту вопроса, а \texttt{P0} его консеквенту (следствию). Отметим, что язык ПО--формул несколько богаче чем язык пролога, поскольку допускает использование в качестве консеквента дизъюнкцию произвольных формул, пролог же допускает лишь одну атомарную формулу.
+\item[--] целевой вопрос ПО--формулы вида $\forall_YB$ соответствует запросу пролога.
 \end{itemize}
 
 Рассмотрим следующую программу на языке Пролог и запрос к ней:
@@ -86,19 +86,19 @@ $\forall \emptyset\colon\exists in(a,b),in(b,c)\colon\left\{
 Области применения языка Prolog и декларативных языков в целом
 
 \begin{itemize}
-   \item[--] Реализация систем искусственного интеллекта
-   \item[--] Создание экспертных систем и оболочек экспертных систем
-   \item[--] Разработка систем помощи принятия решений
-   \item[--] Разработка систем обработки естественного языка
-   \item[--] Построение планов действий роботов и т.п.
+   \item[--] реализация систем искусственного интеллекта
+   \item[--] создание экспертных систем и оболочек экспертных систем
+   \item[--] разработка систем помощи принятия решений
+   \item[--] разработка систем обработки естественного языка
+   \item[--] построение планов действий роботов и т.п.
 \end{itemize}
 
 Особенности языка
 
 \begin{itemize}
-    \item[--] Описание проблемы и правил ее решения
-    \item[--] Нахождение всех возможных решений с помощью механизма поиска с возвратом (backtracking)
-    \item[--] Легкий синтаксис
+    \item[--] описание проблемы и правил ее решения
+    \item[--] нахождение всех возможных решений с помощью механизма поиска с возвратом (backtracking)
+    \item[--] легкий синтаксис
 \end{itemize}
 	
 		Prolog был создан под влиянием более раннего языка Planner и позаимствовал из него следующие идеи:
